<resources>
    <string name="app_name">Yummy</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="recipes">Recipes</string>
    <string name="favorite">Favorite</string>
    <string name="joke">Joke</string>
    <string name="floatingactionbutton">floatingActionButton</string>
    <string name="errorimage">errorImage</string>
    <string name="no_internet_conection">No Internet Conection</string>
    <string name="recipe_image_view">recipe_image_view</string>
    <string name="recipe_name">Recipe Name</string>
    <string name="_100">100</string>
    <string name="deatails">Deatails</string>
    <string name="ic_favorite">ic_favorite</string>
    <string name="ic_time">ic_time</string>
    <string name="ic_sentiment">ic_sentiment</string>
    <string name="ic_vagan">ic_vagan</string>


    // Bottom Sheet
    <string name="meal_type">Meal Type</string>
    <string name="main_course">Main Course</string>
    <string name="side_dish">Side Dish</string>
    <string name="dessert">Dessert</string>
    <string name="appetizer">Appetizer</string>
    <string name="salad">Salad</string>
    <string name="bread">Bread</string>
    <string name="breakfast">Breakfast</string>
    <string name="soup">Soup</string>
    <string name="beverage">Beverage</string>
    <string name="sauce">Sauce</string>
    <string name="marinade">Marinade</string>
    <string name="fingerfood">FingerFood</string>
    <string name="snack">Snack</string>
    <string name="drink">Drink</string>
    <string name="gluten_free">Gluten Free</string>
    <string name="ketogenic">Ketogenic</string>
    <string name="vegetarian">Vegetarian</string>
    <string name="vegan">Vegan</string>
    <string name="pescetarian">Pescetarian</string>
    <string name="paleo">Paleo</string>
    <string name="primal">Primal</string>
    <string name="whole30">Whole30</string>
    <string name="diet_type">Diet Type</string>
    <string name="apply">Apply</string>
    <string name="search">search</string>
    <string name="tabdetails" />
    <string name="dairy_free">Dairy Free</string>
    <string name="healthy">Healthy</string>
    <string name="cheap">Cheap</string>

</resources>