<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.fragment.recipes.RecipesFragment"
        android:background="@color/lightGray">


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recipe_recycleView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="vertical"
            tools:listitem="@layout/item_recipes"
            android:layout_marginStart="7dp"
            android:layout_marginEnd="7dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/floatingActionButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:layout_margin="20dp"
            app:backgroundTint="@color/yellow"
            android:src="@drawable/ic_restaurant"
            android:layout_gravity="end|bottom"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:contentDescription="@string/floatingactionbutton"
            android:focusable="true" />

        <ImageView
            android:id="@+id/error_image_view"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/ic_sentiment"
            android:alpha="0.5"
            android:visibility="gone"
            android:contentDescription="@string/errorimage"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_internet_conection"
            android:textStyle="bold"
            android:alpha="0.5"
            android:textSize="20sp"
            android:layout_marginTop="10dp"
            android:visibility="gone"
            app:layout_constraintStart_toStartOf="@id/error_image_view"
            app:layout_constraintEnd_toEndOf="@id/error_image_view"
            app:layout_constraintTop_toBottomOf="@id/error_image_view" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>