<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="result"
            type="com.asmaa.yummy.model.ResultFood" />
    </data>

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="20dp"
        app:strokeColor="@color/lightMediumGray"
        app:strokeWidth="1dp"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/recipe_image_view"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:src="@color/green"
                android:scaleType="centerCrop"
                loadImageFromUrl="@{result.image}"
                android:contentDescription="@string/recipe_image_view"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/recipes_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/courgette"
                android:text="@{result.title}"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="@color/darker"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/recipe_image_view" />

            <TextView
                android:id="@+id/recipe_deatails"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@{result.summary}"
                android:textSize="17sp"
                android:textColor="@color/darkGray"
                android:ellipsize="end"
                android:maxLines="3"
                android:layout_marginTop="6dp"
                android:layout_marginEnd="5dp"
                app:layout_constraintStart_toStartOf="@id/recipes_name"
                app:layout_constraintTop_toBottomOf="@id/recipes_name" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/recipe_deatails"
                android:weightSum="3"
                android:orientation="horizontal"
                android:layout_marginTop="15dp"
                android:baselineAligned="false">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:layout_weight="1"
                    android:gravity="center"
                    tools:ignore="UseCompoundDrawables">

                    <ImageView
                        android:id="@+id/love_recipe_imageview"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_favorite"
                        android:contentDescription="@string/ic_favorite" />

                    <TextView
                        android:id="@+id/love_recipe_textview"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/_100"
                        setNumberOfLikes="@{result.aggregateLikes}"
                        android:textColor="@color/red"
                        android:layout_marginTop="5dp" />
                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:layout_weight="1"
                    android:gravity="center"
                    tools:ignore="UseCompoundDrawables">

                    <ImageView
                        android:id="@+id/leave_recipe_imageview"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_time"
                        android:contentDescription="@string/ic_time" />

                    <TextView
                        android:id="@+id/leave_recipe_textview"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:text="@string/_100"
                        setNumberOfLikes="@{result.readyInMinutes}"
                        android:textColor="#827717" />
                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:layout_weight="1"
                    android:gravity="center"
                    tools:ignore="UseCompoundDrawables">

                    <ImageView
                        android:id="@+id/time_recipe_imageview"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_vagan"
                        android:contentDescription="@string/ic_vagan"
                        applyVeganColor="@{result.vegan}"/>

                    <TextView
                        android:id="@+id/time_recipe_textview"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:text="Vegan"
                        applyVeganColor="@{result.vegan}"
                        android:textColor="#2E7D32" />

                </LinearLayout>
            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>
</layout>